<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome_label"
                android:id="@+id/textView"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:layout_marginTop="69dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectContact_button"
                android:id="@+id/button"
                android:layout_below="@+id/button2" android:layout_centerHorizontal="true"
                android:onClick="renderSelectContact"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addContact_button"
                android:id="@+id/button2"
                android:layout_below="@+id/textView" android:layout_alignStart="@+id/button"
                android:layout_marginTop="184dp" android:onClick="renderAddContact"/>
    </RelativeLayout>
</LinearLayout>

