<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_label"
                android:id="@+id/button3"
                android:layout_marginBottom="90dp" android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" android:onClick="addContact"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_label"
                android:id="@+id/textView2" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_marginTop="123dp" android:layout_toStartOf="@+id/button3"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/email_label"
                  android:id="@+id/textView3"
                  android:layout_marginTop="38dp"
                  android:layout_below="@+id/textView2" android:layout_alignParentStart="true"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/phone_label"
                  android:id="@+id/textView4"
                  android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/address_label"
                  android:id="@+id/textView5"
                  android:layout_below="@+id/textView4" android:layout_alignParentStart="true"
                  android:layout_marginTop="41dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_toEndOf="@+id/textView2"
                android:layout_above="@+id/textView3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText2" android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText3" android:layout_above="@+id/textView5"
                android:layout_alignStart="@+id/editText2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText4" android:layout_alignBottom="@+id/textView5"
                android:layout_alignStart="@+id/editText3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/addContact_label"
                android:id="@+id/textView6" android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView3"/>
    </RelativeLayout>
</LinearLayout>